# RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Camera.h  Constant.h  File.h  HitPoint.h  Hitable.h  Material.h  Model.h  Ppm.h  Random.h  Ray.cpp  Ray.h  Rect.h  Renderer.h  Scene.h  Shape.h  ShapeBuilder.h  Sphere.h  Texture.h  Type.h  Util.h  Vector3.cpp  Vector3.h  main.cpp
